--- a/Modules/Blog/Resources/views/assets/taginput/tagsinput.css
+++ b/Modules/Blog/Resources/views/assets/taginput/tagsinput.css
@@ -52,6 +52,7 @@
 .bootstrap-tagsinput .tag {
     margin-right: 7px;
     margin-top: 7px;
+    display:inline-flex;
 }
 .bootstrap-tagsinput .tag [data-role="remove"] {
     margin-left: 8px;
